<resources>
    <string name="app_name">Code Buddy</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="profile">Profile</string>
    <string name="projects">Projects</string>
    <string name="achievements">Achievements</string>
    <string name="shop">Shop</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>
    <string name="title_activity_log_in">Log In</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="total_score">Total score</string>
    <string name="avg_score">Avg score</string>
    <string name="games_played">Games played</string>
    <string name="project_name">Project Name:</string>
    <string name="score">Score:</string>
    <string name="status">Status:</string>
    <string name="rank">Rank:</string>
    <string name="created_on">Created on:</string>
    <string name="members">Members:</string>
    <string name="title_activity_project_metriics">Project Metrics</string>
    <string name="title_activity_tower">Tower</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_shop">ShopActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="purchase">Purchase</string>
    <string name="equipment">Equipment</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="helmets">Helmet</string>
    <string name="shirts">Shirt</string>
    <string name="legs">Legs</string>
    <string name="blocks">Block</string>
    <string name="unknown_id">Unknown Id</string>
    <string name="github_email">Github Email</string>
    <string name="send_verifivation_code">Send verification code</string>
    <string name="verification_code">Verification Code</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="invalid_mail">Invalid e-mail address</string>
    <string name="purchase_alert">Are you sure you wanna buy this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="invalid_password">Password needs to have alteast 8 characters, contain 1 letter and 1 digit</string>
    <string name="mismatch_password">Passwords don\'t match</string>
    <string name="already_have_a_code">Already have a code</string>
    <string name="branch">Branch</string>
    <string name="default_error">Something went wrong</string>
    <string name="commited_on">Commited on:</string>
    <string name="no_items_available">No {{item_type}} available</string>
    <string name="price">Price:</string>
    <string name="purchased">Purchased</string>
    <string name="no_achievements">No Achievements Completed or in Progress</string>
    <string name="no_projects">No Projects available</string>
</resources>
