<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/row_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/avatar_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/avatar"
                android:layout_width="100dp"
                android:layout_height="160dp"
                android:src="@drawable/ic_launcher" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/stats_layout"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background='@color/light_yellow'
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:id="@+id/stats_labels"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/total_score_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_score" />

                <TextView
                    android:id="@+id/avg_score_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/avg_score" />

                <TextView
                    android:id="@+id/completed_achievements_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/completed_achievements" />

                <TextView
                    android:id="@+id/games_played_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/games_played" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/stats_values"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                >

                <TextView
                    android:id="@+id/total_score_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="test1" />

                <TextView
                    android:id="@+id/avg_score_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="test2" />

                <TextView
                    android:id="@+id/completed_achievements_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="test3" />

                <TextView
                    android:id="@+id/games_played_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="text4" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
