<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_grey"
    android:padding="20dp">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/blue"
    android:text="@string/equipment"
    android:textSize="25dp"
    />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/helmetPrevious"
            android:layout_width="35dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@drawable/previous" />

        <LinearLayout
            android:id="@+id/helmetLayout"
            android:layout_width="150dp"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical">


        </LinearLayout>

        <Button
            android:id="@+id/helmetNext"
            android:layout_width="35dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@drawable/next" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/shirtPrevious"
            android:layout_width="35dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@drawable/previous" />

        <LinearLayout
            android:id="@+id/shirtLayout"
            android:layout_width="150dp"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical">


        </LinearLayout>

        <Button
            android:id="@+id/shirtNext"
            android:layout_width="35dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@drawable/next" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/legsPrevious"
            android:layout_width="35dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@drawable/previous" />

        <LinearLayout

            android:id="@+id/legsLayout"
            android:layout_width="150dp"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical">



        </LinearLayout>

        <Button
            android:id="@+id/legsNext"
            android:layout_width="35dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@drawable/next" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/blockPrevious"
            android:layout_width="35dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@drawable/previous" />

        <LinearLayout
            android:id="@+id/blockLayout"
            android:layout_width="150dp"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical">




        </LinearLayout>

        <Button
            android:id="@+id/blockNext"
            android:layout_width="35dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@drawable/next" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <Button
            style="@style/DefaultButton"
            android:background="@drawable/default_button"
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/cancel"/>
        <Button
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"
            style="@style/DefaultButton"
            android:id="@+id/apply"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/default_button"
            android:text="@string/apply"/>
    </LinearLayout>
</LinearLayout>

